@@ -5,7 +5,7 @@ DIST rkt-0.5.6.tar.gz 1186043 SHA256 bae39568c9e980245b13309ba89eac1f31ba8e29d7c
 DIST rkt-0.7.0.tar.gz 1312745 SHA256 1e5996c9c26a69f107d9d4f8dd2a3e55ca3a9b8491ecbd9fe2dfe423c7c384ce SHA512 09c142a1edd3876476d425481e45d1167f4da1eb88fe8c00fb18cf0878851ad5228cdbbd4a5a20f0f6b4fc1634bc68c592bbf22c89a5a51881e7bd12b8ca4102 WHIRLPOOL 5db5f191948379d48298f360218b40d5ff67b48583c56993eb719582db875611fc4d522f711100f7c25bca5aa647bb337e5d3884b884b88ae4820e1e364a9886
 EBUILD rkt-0.5.5.ebuild 1246 SHA256 c7d31c4c3f4d7cd9219314a13e9b6e9c0594a9f4b3b103a6b1cd68b8b60ffd4a SHA512 f8bb8ec39e831aea1fc8f587c03a3cfa0fd0c198652880a4b3f6fc3a444cccda22e87d106a49e7cd79e04e0b4a25d8441e58be5fdbff39bb9003f545377b9c4a WHIRLPOOL e969b7990223317972fa55a951fe36a0612fdb564ff881a310d542cac7ceaa6e2949ab6c7dd02ca35a5bc4f0138e909d9f4ea9a10fa8949612c4355656bfe533
 EBUILD rkt-0.5.6.ebuild 1246 SHA256 c7d31c4c3f4d7cd9219314a13e9b6e9c0594a9f4b3b103a6b1cd68b8b60ffd4a SHA512 f8bb8ec39e831aea1fc8f587c03a3cfa0fd0c198652880a4b3f6fc3a444cccda22e87d106a49e7cd79e04e0b4a25d8441e58be5fdbff39bb9003f545377b9c4a WHIRLPOOL e969b7990223317972fa55a951fe36a0612fdb564ff881a310d542cac7ceaa6e2949ab6c7dd02ca35a5bc4f0138e909d9f4ea9a10fa8949612c4355656bfe533
-EBUILD rkt-0.7.0.ebuild 2233 SHA256 d6931a4ca695febb1ef3386b0acc24c09f1145e9f94609d64c7364dc5bb9ac28 SHA512 b2c042e9452070b7d8d869f7d589e9ecff839aa106bcf77e2c6b415986c9f8fd6be54bc1392077d40d9a256f120adcc77f526257d2b33675eb8c03ea788a42de WHIRLPOOL 512d92212bb8cbff016808f7e92b76998de7143bdd6e74abb7565fa574d0e70e5266be76a230336d64606ab74de6fb51a669b3f9add9ec9049736dcd07009d8a
-EBUILD rkt-9999.ebuild 2233 SHA256 d6931a4ca695febb1ef3386b0acc24c09f1145e9f94609d64c7364dc5bb9ac28 SHA512 b2c042e9452070b7d8d869f7d589e9ecff839aa106bcf77e2c6b415986c9f8fd6be54bc1392077d40d9a256f120adcc77f526257d2b33675eb8c03ea788a42de WHIRLPOOL 512d92212bb8cbff016808f7e92b76998de7143bdd6e74abb7565fa574d0e70e5266be76a230336d64606ab74de6fb51a669b3f9add9ec9049736dcd07009d8a
-MISC ChangeLog 1091 SHA256 565069fa5c176c379f571d49798bb4ffe73ec0102fcdb84fb599fcbf69176788 SHA512 51dd7fc731880749ec10c4ea5e6dec30c9ef5fdba1e1e7b23af19d99326e72535595035144a2e8f64146f85c106e9a75e2ac50450cf4f153971d95db4cab14b3 WHIRLPOOL 17eb2242c330d0b3c09556ecdecd6fa14780be7049c464e5e0b99a4d65bf97850119ac33666c37553fed48bd24cd39ee4ea6166dcafc231ee6f27b5b74ee6f08
+EBUILD rkt-0.7.0-r1.ebuild 2298 SHA256 d4bd46c37a8fb25f51e2ab1774b390a5a53ed12c636f6d824ecae8c82d2f2718 SHA512 f61327e07d5962a6e2d8f669737b967019e07dcb9ecebf849773e648ae87bbe942c33c0f201b7741f820838518ab9ddf685b464bba27c353624ea9e129156281 WHIRLPOOL 857635cb69671032dfa7f7c2cbd14b9ff51c0747c51f787fc1dfc1a78def9c69f8739bdfb1bdaf184e6d69093319af80e007bdd40a0b18b8852587ab11a61202
+EBUILD rkt-9999.ebuild 2298 SHA256 d4bd46c37a8fb25f51e2ab1774b390a5a53ed12c636f6d824ecae8c82d2f2718 SHA512 f61327e07d5962a6e2d8f669737b967019e07dcb9ecebf849773e648ae87bbe942c33c0f201b7741f820838518ab9ddf685b464bba27c353624ea9e129156281 WHIRLPOOL 857635cb69671032dfa7f7c2cbd14b9ff51c0747c51f787fc1dfc1a78def9c69f8739bdfb1bdaf184e6d69093319af80e007bdd40a0b18b8852587ab11a61202
+MISC ChangeLog 1300 SHA256 29bb241b325db4aca9ce237f2f66ac7e756537dd31bef5808b8432d643de493a SHA512 80bde3b34ab8f7c6cb066a7825ea2b74c11b73a0b3d23c1e1923d80fb7b6957a6ebdd123b35647e8909f98af3834801d69b393c4edeccf9a87831bf7ae3f50bf WHIRLPOOL 588fdc2e1b9779b61ed8df7553684a02432d04e5028539ead1490dcc8497afb6cc3ba5acbe52f5f179d7e9b03d5e13baf92d925eefa5258fedd430ea2b2dd676
 MISC metadata.xml 834 SHA256 be0a650eba950e3f8783aba35affca25aeaab2b226e8de199843b81d49cdfc9c SHA512 58d241b528876af21153ad80da9249622120dc12af0d742876c1a799899fb855ded737141ceff7c4c37c96e53c4adb4026e003a664a0dd8b65bccb6114990683 WHIRLPOOL 79673dc22e97c0a7849d9749209ccc88fad5c8edb5a24cf22f0a9310228303223952ce0b27f488570c4ddb38d4c0b19b36147a48eff93fe276440e65565e75ac
